<resources>
	<string name="app_name">Boilerplate-auth</string>
	<string name="email">Email</string>
	<string name="password">Password</string>
	<string name="submit">Submit</string>
	<string name="create_account">Create an account</string>
	<string name="did_you_forget_your_password">Did you forget your password?</string>
	<string name="bact_to_login">Back to login</string>
	<string name="request_a_reset_password_link">Request a Reset Password Link</string>
	<string name="name">Name</string>
</resources>
