<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center|top"
		android:orientation="vertical"
		>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
			android:layout_marginTop="80dp"
			android:text="@string/request_a_reset_password_link"
			android:textAlignment="center"
			android:textAppearance="@style/WeTextAppearance.Large"
			/>

		<EditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_margin="10dp"
			android:hint="@string/email"
			android:inputType="textEmailAddress"
			/>

		<Button
			android:id="@+id/send_email"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_margin="10dp"
			android:text="@string/submit"
			android:textColor="@android:color/white"
			/>

		<TextView
			android:id="@+id/go_to_login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/bact_to_login"
			android:textAlignment="center"
			android:textColor="@color/colorAccent"
			/>

	</LinearLayout>

</layout>

